--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,18 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@assets/*": ["assets/*"]
+    },
+    "baseUrl": "./"
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
+    // "src/app/(tabs)/menu/[id].jsx",
+    // "src/app/(tabs)/menu/index.tsx"
   ]
 }
