--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/node": "^20.12.12",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
